courses/430_programming-languages/assignment-6/tests/error/hw4_error11.correct
operator '&&' requires bool * bool, found bool * int
